Bug 1244292 - [1.2] Release decoder on init failure. r=snorp